@@ -1,7 +1,8 @@
 2007-05-29  Piotr Fusik  <fox@scene.pl>
 * asap.c: fixed a bug in Java version throwing StringIndexOutOfBoundsException
 
-* asap.c: TMC is now played in stereo, just like TM8
+* asap.c, gsplayer/gspasap.c, win32/winamp/in_asap.c: TMC is now played
+  in stereo, just like TM8
 
 
 ** 1.0.0 released on 2007-05-28
